remove mongo uri

--- a/app.env
+++ b/app.env
@@ -1,4 +1,4 @@
-BACKIUM_DB_URI = "mongodb+srv://dev:dev@uibox-dev.wtl7h.mongodb.net/dev?retryWrites=true&w=majority"
+BACKIUM_DB_URI = "mongodb://localhost:27017"
 BACKIUM_DB_NAME = "testing"
 BACKIUM_APP_PORT = 3000
 BACKIUM_REDIS_URI = "localhost:6379"
