--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.4"
 services:
   backium:
     container_name: backium-server
@@ -8,9 +8,9 @@ services:
       - "8080:8080"
     links:
       - redis
-      - mongo
+      - mongodb
     environment:
-      - BACKIUM_DB_URI=mongodb://mongo:27017
+      - BACKIUM_DB_URI=mongodb://mongodb:27017
       - BACKIUM_APP_PORT=8080
       - BACKIUM_REDIS_URI=redis:6379
       - BACKIUM_REDIS_PASSWORD=
@@ -19,8 +19,9 @@ services:
     image: "redis"
     ports:
       - "6379:6379"
-  mongo:
+  mongodb:
     container_name: backium-db
+    hostname: mongodb
     image: mongo
     ports:
       - "27017:27017"
