add generate receipt endpoint #76

--- a/app.env
+++ b/app.env
@@ -3,3 +3,4 @@ BACKIUM_DB_NAME = "testing"
 BACKIUM_APP_PORT = 8080
 BACKIUM_REDIS_URI = "localhost:6379"
 BACKIUM_REDIS_PASSWORD = ""
+BACKIUM_CLOUDINARY_URI = ""
