--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,14 @@ services:
       - BACKIUM_APP_PORT=8080
       - BACKIUM_REDIS_URI=redis:6379
       - BACKIUM_REDIS_PASSWORD=
+  feeder:
+    container_name: feeder
+    build: ./scripts/feeder
+    links:
+      - mongodb
+    environment:
+      - DB_URI=mongodb://mongodb:27017
+      - DB_NAME=testing
   redis:
     container_name: backium-redis
     image: "redis"
