add measurement to variations and orders

--- a/app.env
+++ b/app.env
@@ -3,4 +3,4 @@ BACKIUM_DB_NAME = "testing"
 BACKIUM_APP_PORT = 8080
 BACKIUM_REDIS_URI = "localhost:6379"
 BACKIUM_REDIS_PASSWORD = ""
-BACKIUM_CLOUDINARY_URI = ""
+BACKIUM_CLOUDINARY_URI = "cloudinary://539783681759765:8qOA1QXdk4lqAV109Tq0Iv8zifI@db8lhodn1"
